--- a/src/app/profile/profile.module.css
+++ b/src/app/profile/profile.module.css
@@ -39,6 +39,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
+    word-break: break-all;
 }
 
 .menu {
